--- a/package.json
+++ b/package.json
@@ -1,25 +1,26 @@
+
 {
-  "name": "ncare-erp",
+  "name": "ncare-pharmacy-erp",
   "private": true,
-  "version": "0.0.0",
+  "version": "3.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "firebase deploy"
   },
   "dependencies": {
-    "recharts": "^3.5.1",
-    "react-markdown": "^10.1.0",
-    "lucide-react": "^0.555.0",
-    "@google/genai": "^1.31.0",
     "react": "^19.2.1",
-    "react-dom": "^19.2.1"
+    "react-dom": "^19.2.1",
+    "lucide-react": "^0.555.0",
+    "recharts": "^3.5.1",
+    "@google/genai": "^1.31.0",
+    "react-markdown": "^10.1.0"
   },
   "devDependencies": {
-    "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "vite": "^6.2.1",
+    "typescript": "^5.7.3",
+    "tailwindcss": "^4.0.10"
   }
 }
